# RP2040

./: README.md  rgbblink.c
Adjusting LED brightness by using Potentiometer/: main.c
Identify key press in keypad matrix and print the scan value to the console[/: CMakeLists.txt  blink.c
Interrupt handler/: main.c
Pir_Motion_Sensor/: CMakeLists.txt  main.c
Print a message in UART console/: CMakeLists.txt  blink.c
ServoMotor/: CMakeLists.txt  blink.c  pico_servo.pio
Ultrasonic sensor/: CMakeLists.txt  blink.c  ultra_sonic.c
